<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RichBastard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    
    <string name="help_text">
        Welcome to the Rich Bastard application!\n
        In this game your goal is to answer correctly as many questions as possible.\n
        There are three game modes: <b>Classic game</b>, which resembles a popular TV show, 
        <b>Thematical</b> game, where the questions are from a particular topic, 
        and a <b>Blitz round</b>, where you have limited time to think, so you\'d better be quick!\n
        \n
        Each question has 4 answer choices, only <i>one</i> of which is correct. 
        You may also use one of each three <b>hints:</b>\n
        * <i>50x50</i> - removes two wrong answer choices.\n
        * <i>Ask the audience</i> - the real-life simulation of a audience responses, with normal distribution.\n
        * <i>Change the question</i> - if you find the question too challenging, you may use this hint to change it to a another one.
        But be vary! If you have used previous hints on this question, the new question won\'t have the results of these hints.\n
        \n 
        Good luck, and become rich, bastard! =)\n          
    </string>
    
    <!-- START Menu resourses -->
    
    <string name="menu_start">Start</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    
    <!-- END Menu resourses -->
    <string name="splash_description">Splash Image</string>
    
    <!-- START Game dialog -->
    <string name="end">End</string>
    <string name="epicwin">You were AWESOME! Congratulations! Now you are officially titled Rich Bastard!</string>
    <string name="takemoney">Congratulations! You have won %d₴, you bastard! Press OK to return to main menu.</string>
    <string name="epicfail">Well, you were so close to winning a million.. Kidding! You failed on the first question.</string>
    <string name="lost2to5">Come on, you can do it better. Wish you good luck!</string>
    <string name="lost6to10">You were good.. Better luck next time!</string>
    <string name="lost11to15">You were close.. You played great, bastard! Next time you\'ll make it!</string>
    <string name="congratz"></string>
    <string name="condolence"></string>
    <string name="ok">OK</string>
    <!-- END Game dialog -->
    
    <string name="playThematicGame">Play</string>

</resources>
