<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textSize="50sp" 
        android:textColor="#000"/>

    <Button
        android:id="@+id/menuStartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/menu_start"
        android:textSize="30sp" 
        android:textColor="#000"
        android:background="#fff"/>
    
    <Button
        android:id="@+id/menuSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/menu_settings"
        android:textSize="30sp" 
        android:textColor="#000"
        android:background="#fff"/>
        
     <Button
        android:id="@+id/menuHelpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/menu_help"
        android:textSize="30sp" 
        android:textColor="#000"
        android:background="#fff"/>
     
     <Button
         android:id="@+id/menuExitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/menu_exit"
        android:textSize="30sp" 
        android:textColor="#000"
        android:background="#fff"/>
     
     <ImageView
                android:id="@+id/splashscreen"
                android:contentDescription="@string/splash_description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/splash"
                android:layout_gravity="center"/>
    
</RelativeLayout>



